Disabled vanilla-tilt on Safari (bugged)

--- a/v2/src/components/css/projectsection.css
+++ b/v2/src/components/css/projectsection.css
@@ -50,6 +50,10 @@
         border-color: var(--_border-colour);
         box-shadow: rgba(22, 31, 39, 0.42) 0px 60px 123px -25px,
         rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
+        z-index: 50;
+
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
     }
 
     .sitecard-descriptor, .testimonial-text {
@@ -133,29 +137,25 @@
 
 /* Laptops */
 @media (min-width: 769px) and (max-width: 1024px) {
+    .testimonial-card {
+        display: none;
+    }
 
     #project-summary {
         width: 100%;
     }
 
     .card-container {
-        padding-top: 3rem;
+        padding-top: 1rem;
     }
 
     .site-card {
-        transform: perspective(400px) rotateY(8deg);
+        width: 80%;
+        margin: 0 auto;
     }
 
-    .testimonial-card {
-        transform: perspective(400px) rotateY(-8deg);
-    }
-
-    .site-card, .testimonial-card {
-        width: 22%;
-    }
-
-    .sitecard-descriptor, .testimonial-text {
-        padding-top: 1rem;
+    .sitecard-descriptor {
+        padding-top: 0;
     }
 }
 
@@ -170,17 +170,17 @@
         padding-top: 3rem;
     }
 
-    .site-card {
-        transform: perspective(400px) rotateY(8deg);
-    }
+    /*.site-card {
+        transform: perspective(500px) rotateY(8deg) translateZ(30px);
+    }*/
 
     .sitecard-descriptor, .testimonial-text {
         padding-top: 1rem;
     }
 
-    .testimonial-card {
-        transform: perspective(400px) rotateY(-8deg);
-    }
+    /*.testimonial-card {
+        transform: perspective(500px) rotateY(-8deg) translateZ(30px);
+    }*/
 
     .site-card, .testimonial-card {
         width: 22%;
